Fix aos-related overflow issues
AOS is causing horizontal scroll bars in some contexts. This mostly impacts Safari, but it would sometimes cause issues in Chrome as well.

--- a/src/App.scss
+++ b/src/App.scss
@@ -9,6 +9,7 @@ body {
   font-weight: 200;
   line-height: 2rem;
   text-align: center;
+  overflow-x: hidden;
 
   @media screen {
     background: #373e45;
